--- a/src/filesystem/gen/template.hbs
+++ b/src/filesystem/gen/template.hbs
@@ -6,4 +6,8 @@ import { filesystem } from "./filesys";
 filesystem._init_add_file("/bin/{{@key}}", `{{sanitize this}}`);
 {{/each}}
 
+{{#each lib}}
+filesystem._init_add_file("/lib/{{@key}}", `{{sanitize this}}`);
+{{/each}}
+
 export { filesystem }
